--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1 class="text-3xl font-bold underline">Hello world!</h1>
-<div class="card flex justify-center"><p-button label="Check" /></div>
+<nav class="nav">
+  <a routerLink="/ride" routerLinkActive="active">Przejazd</a>
+  <a routerLink="/geo" routerLinkActive="active">Geolokalizacja</a>
+</nav>
+
+<router-outlet></router-outlet>
