--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,47 +1,15 @@
-.container
-  max-width: 500px
-  margin: 30px auto
-  padding: 20px
-  background: #f2f2f2
-  border-radius: 10px
-  font-family: 'Segoe UI', sans-serif
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1)
+.nav
+  display: flex;
+  gap: 20px;
+  background: #f4f4f4;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 8px;
 
-h2
-  margin-bottom: 20px
+.nav a
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
 
-.form-group
-  margin-bottom: 15px
-
-input
-  width: 100%
-  padding: 10px
-  font-size: 15px
-
-.price-box
-  margin: 15px 0
-  font-size: 18px
-  color: green
-
-.buttons button
-  padding: 10px 20px
-  margin-right: 10px
-  font-size: 16px
-  border: none
-  border-radius: 5px
-  cursor: pointer
-
-.yes
-  background-color: #28a745
-  color: white
-
-.no
-  background-color: #dc3545
-  color: white
-
-.summary
-  margin-top: 20px
-  font-size: 16px
-  background: white
-  padding: 10px
-  border-radius: 5px
+.nav a.active
+  color: #007ad9;
