--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="nav">
-  <a routerLink="/ride" routerLinkActive="active">Przejazd</a>
-  <a routerLink="/geo" routerLinkActive="active">Geolokalizacja</a>
+  <a routerLink="/ride" routerLinkActive="active">Passager</a>
+  <a routerLink="/geo" routerLinkActive="active">Driver</a>
 </nav>
 
 <router-outlet></router-outlet>
