--- a/src/app/ride/ride.component.html
+++ b/src/app/ride/ride.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <p-button
-    label="Pokaż cenę"
+    label="Zamów"
     (onClick)="showPrice()"
     [disabled]="!from.trim() || !to.trim()"
     styleClass="p-button-sm p-button-primary"
