--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,15 +1,15 @@
 .nav
-  display: flex;
-  gap: 20px;
-  background: #f4f4f4;
-  padding: 10px;
-  margin-bottom: 20px;
-  border-radius: 8px;
+  display: flex
+  gap: 20px
+  background: #f4f4f4
+  padding: 10px
+  margin-bottom: 20px
+  border-radius: 8px
 
 .nav a
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
+  text-decoration: none
+  color: #333
+  font-weight: bold
 
 .nav a.active
-  color: #007ad9;
+  color: #007ad9
