--- a/src/app/ride/ride.component.html
+++ b/src/app/ride/ride.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <p-toast></p-toast>
   <h2>Uber - przejazd</h2>
 
@@ -19,8 +19,8 @@
     styleClass="p-button-sm p-button-primary"
   ></p-button>
 
-  <!-- Oferta cenowa -->
-  <div class="offer" *ngIf="showOffer">
+  <! Oferta cenowa -->
+<!-- <div class="offer" *ngIf="showOffer">
     <p *ngIf="price !== null">
       <strong>Cena przejazdu:</strong> {{ price }} zł
     </p>
@@ -54,3 +54,4 @@
     ></p-button>
   </div>
 </div>
+-->
